<?xml version="1.0"?>
<package>
  <name>model_joint_plugin</name>
  <version>1.0.0</version>
  <description>The model_joint_plugin package</description>
  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <license>GPL</license>

  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>GAZEBO</build_depend>
  <build_depend>Protobuf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>GAZEBO</run_depend>
  <run_depend>Protobuf</run_depend>

</package>
